operator/pkg/model/ingestion/testdata/gateway/basic_tls_http/input-serviceimport.yaml
- metadata:
    annotations:
      multicluster.kubernetes.io/derived-service: my-service
    creationTimestamp: null
    name: my-service
    namespace: default
  spec:
    ports: null
    type: ""
  status: {}
