operator/pkg/model/ingestion/testdata/gateway/basic_tls_http/input-tlsroute.yaml
- metadata:
    creationTimestamp: null
    name: tls-app-1
    namespace: default
  spec:
    hostnames:
    - example.com
    parentRefs:
    - name: my-gateway
    rules:
    - backendRefs:
      - name: my-service
        port: 443
      - group: multicluster.x-k8s.io
        kind: ServiceImport
        name: my-service
        port: 443
  status:
    parents: null
